--- a/web/src/app/admin/company.component.html
+++ b/web/src/app/admin/company.component.html
@@ -246,7 +246,7 @@
                                         <div class="row">
                                             <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0 pt-3">
                                                 <mat-slide-toggle name="Checked" class="example-margin" [color]="color"
-                                                    [checked]="toggleChecked" [disabled]="false" #CompanyIDcontrol>
+                                                    [checked]="toggleChecked" (change)="copyData($event.checked)" [disabled]="false" #CompanyIDcontrol>
                                                     Copy Data
                                                 </mat-slide-toggle>
                                             </div>
@@ -349,7 +349,7 @@
                                             </div>
                                             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-3 p-0">
                                                 <button class="ms-2" mat-raised-button color="primary"
-                                                    [disabled]="!f.valid">Save</button>
+                                                 >Save</button>
                                                 <button class="ms-3" type="button" mat-raised-button
                                                     *ngIf="disableSuperAdminFields === false"
                                                     [routerLink]="['/admin/companyList']">Cancel</button>
