--- a/web/src/app/admin/company.component.html
+++ b/web/src/app/admin/company.component.html
@@ -173,29 +173,23 @@
                                         <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>Effective Date</mat-label>
-                                                <input matInput name="EffectiveDate" [(ngModel)]="data.EffectiveDate"
-                                                    [disabled]="disableSuperAdminFields" required #EffectiveDatecontrol
-                                                    [matDatepicker]="picker1">
-                                                <mat-datepicker-toggle matSuffix [for]="picker1">
-                                                </mat-datepicker-toggle>
+                                               
                                                 <mat-datepicker #picker1></mat-datepicker>
+                                                <input matInput name="EffectiveDate" type="date"
+                                                [(ngModel)]="data.EffectiveDate">
                                                 <mat-error>
-                                                    Shop count is required
+                                                    Effective is required
                                                 </mat-error>
                                             </mat-form-field>
                                         </div>
                                         <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>Cancellation Date</mat-label>
-                                                <input matInput name="CacellationDate"
-                                                    [(ngModel)]="data.CancellationDate"
-                                                    [disabled]="disableSuperAdminFields" required
-                                                    #CacellationDatecontrol [matDatepicker]="picker2">
-                                                <mat-datepicker-toggle matSuffix [for]="picker2">
-                                                </mat-datepicker-toggle>
-                                                <mat-datepicker #picker2></mat-datepicker>
+                                             
+                                                <input matInput name="CacellationDate" type="date"
+                                                [(ngModel)]="data.CacellationDate">
                                                 <mat-error>
-                                                    Plan start date
+                                                    Cancellation is required
                                                 </mat-error>
                                             </mat-form-field>
                                         </div>
@@ -246,14 +240,15 @@
                                         <div class="row">
                                             <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0 pt-3">
                                                 <mat-slide-toggle name="Checked" class="example-margin" [color]="color"
-                                                    [checked]="toggleChecked" (change)="copyData($event.checked)" [disabled]="false" #CompanyIDcontrol>
+                                                    [checked]="toggleChecked" (change)="copyData($event.checked)"
+                                                    [disabled]="false" #CompanyIDcontrol>
                                                     Copy Data
                                                 </mat-slide-toggle>
                                             </div>
                                             <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
                                                 <mat-form-field class="example-full-width mb-0">
                                                     <mat-label>Owner Name</mat-label>
-                                                    <input matInput name="Name" [(ngModel)]="data1.Name" required
+                                                    <input matInput name="Name" [(ngModel)]="data.Name" required
                                                         #Namecontrol [autocomplete]="false">
                                                     <mat-error>
                                                         Company ID is required
@@ -263,21 +258,21 @@
                                             <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
                                                 <mat-form-field class="example-full-width mb-0">
                                                     <mat-label>DOB</mat-label>
-                                                    <input matInput name="DOB" type="date" [(ngModel)]="data1.DOB">
+                                                    <input matInput name="DOB" type="date" [(ngModel)]="data.DOB">
                                                 </mat-form-field>
                                             </div>
                                             <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
                                                 <mat-form-field class="example-full-width mb-0">
                                                     <mat-label>Anniversary</mat-label>
                                                     <input matInput name="Anniversary" type="date"
-                                                        [(ngModel)]="data1.Anniversary">
+                                                        [(ngModel)]="data.Anniversary">
                                                 </mat-form-field>
                                             </div>
                                             <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
                                                 <mat-form-field class="example-full-width mb-0">
                                                     <mat-label>Mobile No1</mat-label>
                                                     <input matInput name="MobileNo11" type="number"
-                                                        [(ngModel)]="data1.MobileNo1"
+                                                        [(ngModel)]="data.MobileNo1"
                                                         pattern="^((\\+91-?)|0)?[0-9]{10}$" required #MobileNo1control1>
                                                     <mat-error>
                                                         Invalid Mobile Number.
@@ -290,14 +285,14 @@
                                                 <mat-form-field class="example-full-width mb-0">
                                                     <mat-label>Mobile No2</mat-label>
                                                     <input matInput name="MobileNo2" type="number"
-                                                        [(ngModel)]="data1.MobileNo2">
+                                                        [(ngModel)]="data.MobileNo2">
                                                 </mat-form-field>
                                             </div>
                                             <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
                                                 <mat-form-field class="example-full-width mb-0">
                                                     <mat-label>PhoneNo</mat-label>
                                                     <input matInput name="PhoneNo1" type="number"
-                                                        [(ngModel)]="data1.PhoneNo" #PhoneNocontrol1>
+                                                        [(ngModel)]="data.PhoneNo" #PhoneNocontrol1>
                                                     <mat-error>
                                                         Invalid Phone Number
                                                     </mat-error>
@@ -307,7 +302,7 @@
                                                 <mat-form-field class="example-full-width mb-0">
                                                     <mat-label>Email</mat-label>
                                                     <input matInput name="Email" type="email" ngModel email="true"
-                                                        [(ngModel)]="data1.Email" required #Emailcontrol1>
+                                                        [(ngModel)]="data.Email" required #Emailcontrol1>
                                                     <mat-error>
                                                         Invalid Email Id
                                                     </mat-error>
@@ -316,7 +311,7 @@
                                             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 mb-0">
                                                 <mat-form-field class="example-full-width mb-0">
                                                     <mat-label>Address</mat-label>
-                                                    <input matInput name="Address1" [(ngModel)]="data1.Address" required
+                                                    <input matInput name="Address1" [(ngModel)]="data.Address" required
                                                         #Addresscontrol1 minlength="2">
                                                     <mat-error>
                                                         Address minimum 2 characters is required.
@@ -328,7 +323,7 @@
                                             <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
                                                 <mat-form-field class="example-full-width mb-0">
                                                     <mat-label>LoginName</mat-label>
-                                                    <input matInput name="LoginName" [(ngModel)]="data1.LoginName"
+                                                    <input matInput name="LoginName" [(ngModel)]="data.LoginName"
                                                         autocomplete="off" required #LoginNamecontrol
                                                         autocomplete="nope">
                                                     <mat-error>
@@ -339,7 +334,7 @@
                                             <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
                                                 <mat-form-field class="example-full-width mb-0">
                                                     <mat-label>Password</mat-label>
-                                                    <input matInput name="Password" [(ngModel)]="data1.Password"
+                                                    <input matInput name="Password" [(ngModel)]="data.Password"
                                                         required #Passwordcontrol type="password"
                                                         autocomplete="new-password">
                                                     <mat-error>
@@ -348,8 +343,7 @@
                                                 </mat-form-field>
                                             </div>
                                             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-3 p-0">
-                                                <button class="ms-2" mat-raised-button color="primary"
-                                                 >Save</button>
+                                                <button class="ms-2" mat-raised-button color="primary" [disabled]="!f.valid">Save</button>
                                                 <button class="ms-3" type="button" mat-raised-button
                                                     *ngIf="disableSuperAdminFields === false"
                                                     [routerLink]="['/admin/companyList']">Cancel</button>
@@ -364,8 +358,8 @@
                                             <div class="col-xl-11 col-lg-11 col-md-11 col-sm-12 mb-0 ">
                                                 <mat-form-field appearance="legacy">
                                                     <mat-label>User Image</mat-label>
-                                                    <input matInput placeholder="Placeholder" name='PhotoURL'
-                                                        [(ngModel)]="data1.PhotoURL">
+                                                    <input matInput name='PhotoURL' [(ngModel)]="data.PhotoURL">
+
                                                     <mat-icon matSuffix class="upload_icon">cloud_upload</mat-icon>
                                                 </mat-form-field>
                                             </div>
