--- a/web/src/app/admin/shop-list/shop-list.component.html
+++ b/web/src/app/admin/shop-list/shop-list.component.html
@@ -13,7 +13,7 @@
               <div class="row">
                 <div class="col-sm-12" style="overflow: auto; height: 530px;">
                   <div class="table-responsive">
-                    <table class="table  table-hover">
+                    <table  class="table table-striped table-hover table-sm table-bordered" style="border: 2px solid #fff !important;">
                       <thead>
                         <tr>
                           <th scope="col">#</th>
