--- a/web/src/app/common/login.component.html
+++ b/web/src/app/common/login.component.html
@@ -1,4 +1,5 @@
 <div class="container-fluid bb p-5">
+  <ngx-spinner type="ball-scale-multiple"></ngx-spinner>
   <div class="row">
     <div class="container ">
       <div class="row">
