--- a/web/src/app/admin/company.component.html
+++ b/web/src/app/admin/company.component.html
@@ -331,7 +331,7 @@
                                                     </mat-error>
                                                 </mat-form-field>
                                             </div>
-                                            <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
+                                            <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0" *ngIf="id == 0">
                                                 <mat-form-field class="example-full-width mb-0">
                                                     <mat-label>Password</mat-label>
                                                     <input matInput name="Password" [(ngModel)]="data.Password"
