--- a/web/src/app/admin/user-update-password/user-update-password.component.html
+++ b/web/src/app/admin/user-update-password/user-update-password.component.html
@@ -7,7 +7,7 @@
                         <div class="header p-2 py-0 pt-1">
                             <div class="row">
                                 <div class="col-md-1 col-12 p-0 ms-3">
-                                    <h2>Company List</h2>
+                                    <h2>User List</h2>
                                     <ngx-spinner type="ball-scale-multiple"></ngx-spinner>
                                 </div>
                                 <div class="col-2">
@@ -30,8 +30,7 @@
                                     </ngb-pagination>
                                 </div>
                                 <div class="col-2 ms-auto">
-                                    <mat-icon class="col-white plus_icon" [routerLink]="['/admin/company',0]"
-                                        style="float: right;"> add</mat-icon>
+                                    
                                 </div>
                             </div>
                         </div>
@@ -46,54 +45,78 @@
                                             <th>Details</th>
                                             <th class="text-left">S.No</th>
                                             <th class="text-left"> Name</th>
-                                            <th class="text-left">OwnerName</th>
-                                            <th class="text-left">Address</th>
-                                            <th class="text-left">City</th>
-                                            <th class="text-left">Mobile</th>
+                                            <th class="text-left">Mobile1</th>
+                                            <th class="text-left">Mobile2</th>
                                             <th class="text-left">Email</th>
-                                            <th class="text-left">EffectiveDate</th>
-                                            <th class="text-left">Shops</th>
-                                            <!-- <th class="text-left">Plan</th> -->
-                                            <th class="text-left">Version</th>
-                                            <th class="text-left">CacellationDate</th>
+                                            <th class="text-left">Address</th>
+                                            <th class="text-left">Branch</th>
+                                            <th class="text-left">UserGroup</th>
+                                            
                                         </tr>
                                     </thead>
                                     <tbody>
                                         <tr class="text-center" *ngFor="let data of dataList  ; let i = index;">
                                             <td>
                                                 <i class="fas fa-info-circle"
-                                                    style="color: rgb(23, 23, 194); font-size: 20px; cursor: pointer;"
-                                                    [routerLink]="['/admin/company',data.ID]">
-                                                </i>
-                                               
-                                                <i class="fa fa-trash"
-                                                    style="color: rgb(250, 0, 0);
-                                                    font-size: 15px;
-                                                    cursor: pointer; "
-                                                    (click)="deleteItem(i)" title="delete">
+                                                    style="color: rgb(23, 23, 194); font-size: 20px; cursor: pointer;"  data-mdb-toggle="modal" 
+                                                    data-mdb-target="#exampleModal" (click)="setID(data.ID)">
                                                 </i>
                                             </td>
-                                            <td class="text-left">{{ dataList.length - i }}</td>
+                                            <td class="text-left">{{dataList.length - i }}</td>
                                             <td class="text-left">{{data.Name}}</td>
-                                            <td class="text-left">{{data.OwnerName }}</td>
-                                            <td class="text-left">{{data.Address }}</td>
-                                            <td class="text-left">{{data.City }}</td>
                                             <td class="text-left">{{data.MobileNo1 }}</td>
-                                            <td class="text-left">{{data.Email}}</td>
-                                            <td class="text-left">{{data.EffectiveDate}}</td>
-                                            <td class="text-left">{{data.NoOfShops}}</td>
-                                            <!-- <td class="text-left">{{data.Plan}}</td> -->
-                                            <td class="text-left">{{data.Version}}</td>
-                                            <td class="text-left">{{data.CancellationDate }}</td>
+                                            <td class="text-left">{{data.MobileNo2}}</td>
+                                            <td class="text-left">{{data.Email }}</td>
+                                            <td class="text-left">{{data.Address }}</td>
+                                            <td class="text-left">{{data.Branch}}</td>
+                                            <td class="text-left">{{data.UserGroup}}</td>
                                         </tr>
                                     </tbody>
                                 </table>
                             </div>
-
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        
     </div>
-</section>
+</section> 
+
+
+  
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header  px-4 py-1">
+          <h2 class="modal-title header pt-2" id="exampleModalLabel">Update Password</h2>
+          <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <form #f="ngForm">
+        <div class="modal-body">
+            <div class="row">
+                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 mb-0 mx-auto" >
+                    <mat-form-field class="example-full-width mb-0">
+                        <mat-label>Password</mat-label>
+                        <input matInput name="Password" [(ngModel)]="data.Password"
+                            required #Passwordcontrol 
+                            >
+                        <mat-error>
+                            Password is required
+                        </mat-error>
+                    </mat-form-field>
+                </div>
+            </div>
+           
+
+           
+        </div>
+        <div class="modal-footer">
+          <button type="button" mat-raised-button color="primary" [disabled]="!f.valid" (click)="UpdatePassword()" data-mdb-dismiss="modal">Save</button>
+        </div>
+    </form>
+      </div>
+    </div>
+  </div>
+
