--- a/web/src/app/common/common.component.html
+++ b/web/src/app/common/common.component.html
@@ -22,6 +22,7 @@
         <div class="drop-content" id="collapseExample">
           <a href="javascript:void(0)" [routerLink]="['/admin/company',0]" id="collapseExample">Company Info</a>
           <a href="javascript:void(0)" [routerLink]="['/admin/companyList']" id="collapseExample">Company List</a>
+          <a href="javascript:void(0)" [routerLink]="['/admin/userList']" id="collapseExample">User List</a>
           <a class="dropdown-item" href="javascript:void(0)">CompanyLogin History</a>
         </div>
       </div>
