--- a/web/src/app/admin/company.component.css
+++ b/web/src/app/admin/company.component.css
@@ -36,7 +36,7 @@
 
 
 
-  [type="file"]::-webkit-file-upload-button {
+  /* [type="file"]::-webkit-file-upload-button {
     background: #ED1C1B;
     border: 1px solid #ED1C1B;
     border-radius: 4px;
@@ -53,4 +53,4 @@
     background: #fff;
     border: 2px solid #535353;
     color: #000;
-  }
+  } */
