--- a/web/src/app/admin/user-update-password/user-update-password.component.html
+++ b/web/src/app/admin/user-update-password/user-update-password.component.html
@@ -59,7 +59,7 @@
                                             <td>
                                                 <i class="fas fa-info-circle"
                                                     style="color: rgb(23, 23, 194); font-size: 20px; cursor: pointer;"  data-mdb-toggle="modal" 
-                                                    data-mdb-target="#exampleModal" (click)="setID(data.ID)">
+                                                    data-mdb-target="#exampleModal"  (click)="openModal(content,data.ID)">
                                                 </i>
                                             </td>
                                             <td class="text-left">{{dataList.length - i }}</td>
@@ -86,37 +86,31 @@
 
   
   <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header  px-4 py-1">
-          <h2 class="modal-title header pt-2" id="exampleModalLabel">Update Password</h2>
-          <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
-        </div>
+  <ng-template #content role="document" let-modal>
+    <div class="modal-header" style="height: 50px;">
+      <h2 class="modal-title header pt-2" id="exampleModalLabel">Update Password</h2>
+      <button type="button" class="btn-close" aria-hidden="true"
+        (click)="modal.dismiss('Cross click')"></button>
+    </div>
+    <div class="modal-body">
         <form #f="ngForm">
-        <div class="modal-body">
-            <div class="row">
-                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 mb-0 mx-auto" >
-                    <mat-form-field class="example-full-width mb-0">
-                        <mat-label>Password</mat-label>
-                        <input matInput name="Password" [(ngModel)]="data.Password"
-                            required #Passwordcontrol 
-                            >
-                        <mat-error>
-                            Password is required
-                        </mat-error>
-                    </mat-form-field>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 mb-0 mx-auto" >
+                        <mat-form-field class="example-full-width mb-0">
+                            <mat-label>Password</mat-label>
+                            <input matInput name="Password" [(ngModel)]="data.Password" required #Passwordcontrol  >
+                            <mat-error>
+                                Password is required
+                            </mat-error>
+                        </mat-form-field>
+                    </div>
                 </div>
             </div>
-           
-
-           
-        </div>
-        <div class="modal-footer">
-          <button type="button" mat-raised-button color="primary" [disabled]="!f.valid" (click)="UpdatePassword()" data-mdb-dismiss="modal">Save</button>
-        </div>
-    </form>
-      </div>
+            <div class="modal-footer">
+              <button type="button" mat-raised-button color="primary" [disabled]="!f.valid" (click)="UpdatePassword()"  (click)="modal.dismiss('Cross click')">Save</button>
+            </div>
+        </form>
     </div>
-  </div>
+  </ng-template>
 
