--- a/web/src/app/common/common.component.html
+++ b/web/src/app/common/common.component.html
@@ -10,12 +10,10 @@
       </label>
     </div>
     <!-- Navbar items -->
-
     <div class="nav-links">
       <!-- SuperAdmin nav -->
-
-      <a *ngIf="user.UserGroup !== 'SuperAdmin'" [routerLink]="['/admin/adminDashborad']">Dashborad1</a>
-      <div *ngIf="user.UserGroup !== 'SuperAdmin'" class="dropdown">
+      <a *ngIf="user?.data?.UserGroup === 'SuperAdmin'" [routerLink]="['/admin/adminDashborad']">Dashborad1</a>
+      <div *ngIf="user?.data?.UserGroup === 'SuperAdmin'" class="dropdown">
         <a class="dropBtn" data-target="#collapseExample">Administration
           <i class="fa fa-caret-down" aria-hidden="true"></i>
         </a>
@@ -23,16 +21,26 @@
           <a href="javascript:void(0)" [routerLink]="['/admin/company',0]" id="collapseExample">Company Info</a>
           <a href="javascript:void(0)" [routerLink]="['/admin/companyList']" id="collapseExample">Company List</a>
           <a href="javascript:void(0)" [routerLink]="['/admin/userList']" id="collapseExample">User List</a>
-          <a class="dropdown-item" href="javascript:void(0)">CompanyLogin History</a>
+          <a href="javascript:void(0)" [routerLink]="['/admin/loginHistory']" id="collapseExample">Login History</a>
         </div>
+        
       </div>
-
+      <div *ngIf="user?.data?.UserGroup === 'SuperAdmin'" class="dropdown">
+        <a class="dropBtn" data-target="#collapseExample">Product Assign
+          <i class="fa fa-caret-down" aria-hidden="true"></i>
+        </a>
+        <div class="drop-content" id="collapseExample">
+          <a href="javascript:void(0)" [routerLink]="['/product/productManage']" id="collapseExample">Product Manage</a>
+          <a href="javascript:void(0)" [routerLink]="['/product/productMaster']" id="collapseExample">Product Master</a>
+      
+        </div>
+        
+      </div>
       <!-- SuperAdmin end nav-->
 
       <!-- CompanyAdmin nav-->
-
-      <a *ngIf="user.UserGroup === 'CompanyAdmin'" [routerLink]="['/admin/CompanyDashborad']">Dashborad</a>
-      <div *ngIf="user.UserGroup === 'CompanyAdmin'" class="dropdown">
+      <a *ngIf="user.data.UserGroup !== 'SuperAdmin'" [routerLink]="['/admin/CompanyDashborad']">Dashborad</a>
+      <div *ngIf="user.data.UserGroup !== 'SuperAdmin'" class="dropdown">
         <a class="dropBtn" data-target="#collapseExample">Administration
           <i class="fa fa-caret-down" aria-hidden="true"></i>
         </a>
@@ -47,10 +55,7 @@
           <a href="#">Recycle-Bin</a>
         </div>
       </div>
-
     </div>
   </div>
 </body>
-
-
 <router-outlet></router-outlet>
